--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <img id="repo-logo" src="assets/logo.png" alt="Logo" onerror="this.style.display='none'">
     <div>
       <div class="title">CONSULTA ESTADO FISE</div>
-      <div class="small">Busca por DNI o SUMINISTRO — exporta a Excel o PDF</div>
+      <div class="small">Busca por DNI, código o nombre — exporta a Excel o PDF</div>
     </div>
   </header>
 
@@ -56,7 +56,7 @@
       </div>
 
       <div style="display:flex;gap:8px;align-items:center">
-        <input id="searchInput" type="text" placeholder="Ingresar DNI o SUMINISTRO" />
+        <input id="searchInput" type="text" placeholder="Ingresar DNI, nombre o distrito" />
         <button id="btnSearch">Buscar</button>
         <button id="btnClear" class="secondary">Limpiar</button>
       </div>
@@ -95,16 +95,9 @@ let DB = [];
 let currentResults = [];
 
 function showMessage(msg){ alert(msg); }
+function normalizeKey(k){ return k.toString().toLowerCase().replace(/\s+/g,'').replace(/[^a-z0-9ñ]/gi,'').trim(); }
 
-/* 🔹 Normaliza nombre de clave (sin tildes, espacios ni caracteres especiales) */
-function normalizeKey(k){
-  return k.toString().toLowerCase()
-    .replace(/\s+/g,'')
-    .replace(/[^a-z0-9ñ]/gi,'')
-    .trim();
-}
-
-/* 🔹 Cargar múltiples archivos JSON */
+/* Cargar múltiples archivos JSON */
 async function loadFromRepo(baseName){
   if(!baseName) baseName="data";
   DB=[]; let index=1,total=0;
@@ -128,7 +121,7 @@ async function loadFromRepo(baseName){
   renderResults();
 }
 
-/* 🔹 Cargar archivo local */
+/* Cargar archivo local */
 function loadFromLocalFile(file){
   const reader=new FileReader();
   reader.onload=function(e){
@@ -141,25 +134,23 @@ function loadFromLocalFile(file){
   reader.readAsText(file);
 }
 
-/* 🔹 Buscar por DNI o Suministro */
+/* 🔍 Buscar coincidencias en cualquier campo */
 function searchTerm(term){
-  if(!term){ currentResults=[]; renderResults(); return; }
-  const q=term.trim().toLowerCase();
-  currentResults=DB.filter(r=>{
-    let match=false;
+  const q = term.trim().toLowerCase();
+  if(!q){ currentResults=[]; renderResults(); return; }
+
+  currentResults = DB.filter(r=>{
     for(const k in r){
-      const nk=normalizeKey(k);
-      const val=(r[k]||'').toString().toLowerCase();
-      if((nk.includes('dni') || nk.includes('sumin')) && val.includes(q)){
-        match=true; break;
-      }
+      const val = (r[k] || '').toString().toLowerCase();
+      if(val.includes(q)) return true;
     }
-    return match;
+    return false;
   });
+
   renderResults();
 }
 
-/* 🔹 Render tabla con columnas fijas + TOTAL */
+/* Render tabla con columnas fijas + TOTAL */
 function renderResults(){
   const card=document.getElementById('resultsCard');
   const tbody=document.querySelector('#resultsTable tbody');
@@ -175,7 +166,6 @@ function renderResults(){
   thead.appendChild(headerRow);
 
   let totalMonto=0;
-
   currentResults.forEach(r=>{
     const tr=document.createElement('tr');
     headers.forEach(h=>{
@@ -207,7 +197,7 @@ function renderResults(){
   tbody.appendChild(trTotal);
 }
 
-/* 🔹 Exportar a Excel */
+/* Exportar a Excel */
 function exportToExcel(){
   if(!currentResults.length){showMessage('No hay resultados');return;}
   const headers=['DNI','UU.NN','CODIGO DE USUARIO','APELLIDOS Y NOMBRES','PERIODO','N° BOLETA','MONTO','DISTRITO','CENTRO POBLADO','ESTADO'];
@@ -232,7 +222,7 @@ function exportToExcel(){
   saveAs(new Blob([wbout],{type:'application/octet-stream'}),'resultados_fise.xlsx');
 }
 
-/* 🔹 Exportar a PDF */
+/* Exportar a PDF */
 function exportToPDF(){
   if(!currentResults.length){showMessage('No hay resultados');return;}
   const { jsPDF }=window.jspdf; const doc=new jsPDF('l','pt','a4');
@@ -258,7 +248,7 @@ function exportToPDF(){
   doc.save('resultados_fise.pdf');
 }
 
-/* 🔹 Eventos */
+/* Eventos */
 document.getElementById('btnLoad').addEventListener('click',()=>{const base=document.getElementById('fileName').value.trim();loadFromRepo(base||'data');});
 document.getElementById('btnLoadLocal').addEventListener('click',()=>{const inp=document.createElement('input');inp.type='file';inp.accept='.json';inp.onchange=e=>{if(e.target.files[0])loadFromLocalFile(e.target.files[0]);};inp.click();});
 document.getElementById('btnSearch').addEventListener('click',()=>{searchTerm(document.getElementById('searchInput').value);});
@@ -269,4 +259,3 @@ document.getElementById('searchInput').addEventListener('keydown',e=>{if(e.key==
 </script>
 </body>
 </html>
-
